# laplace-potential-gradient

./: CMakeLists.txt  LICENSE  laplace_3d_single_layer_potential_gradient_kernel_functor.hpp  laplace_3d_single_layer_potential_operator_gradient.cpp  laplace_3d_single_layer_potential_operator_gradient.hpp  laplace_gradient.i  test_gradient.py  vector_kernel_scalar_trial_integrand_functor.hpp
